--- a/src/components/PostCard.css
+++ b/src/components/PostCard.css
@@ -27,7 +27,7 @@
     height: 4em;
     border-radius: 50px;
     margin-right: 1em;
-    background: #ccc;
+    background: #cdd2e281;
     overflow: hidden;
 }
 
