--- a/src/components/NewPost.css
+++ b/src/components/NewPost.css
@@ -4,21 +4,28 @@
     right: 0;
     max-width: 50em;
     padding: 2em;
-    background: #F1F4FFBD;
+    background: var(--secondary-trans-var);
     border-radius: 10px 0 0 10px;
-    box-shadow: 0px 2px 13px rgba(208, 208, 208, 0.51);
+    border-left: solid 1px rgba(255, 255, 255, 0.144) ;
+    /* box-shadow: 0px 2px 13px rgba(208, 208, 208, 0.51); */
     height: 100vh;
     transform: translate(25em);
     transition: transform 500ms ease-out;
 }
 
-.NewPost>div{
+.NewPost>div,
+.NewPost .body{
     margin-bottom: 2em;
 }
 
 .NewPost .top{
     display: flex;
     justify-content: space-between;
+}
+
+.NewPost .top svg path,
+.NewPost .body svg path{
+    fill: var(--tertiary-text);
 }
 
 .NewPost .title{
@@ -30,7 +37,7 @@
     font-family: Poppins, sans-serif;
     font-weight: 400;
     font-size: 1em;
-    color: #4F4F4F;
+    /* color: #4F4F4F; */
     margin-left: 1em;
 }
 
@@ -64,7 +71,6 @@
     position: absolute;
     bottom: 1em;
     right: 1em;
-
 }
 
 .NewPost .bottom{
@@ -82,13 +88,13 @@
 
 .NewPost .post{
     background: var(--accent-red-orange);
-    color: #EEF1FF;
+    color: var(--primary);
     font-weight: 600;
 }
 
 .NewPost .cancel{
     background: transparent;
-    border: var(--accent-red-orange) solid 1px;
+    border: var(--accent-red-orange) solid 2px;
     color: var(--accent-red-orange);
 }
 
