--- a/src/pages/Register.css
+++ b/src/pages/Register.css
@@ -16,11 +16,16 @@
     width: 30em;
     padding: 1em 2em;
     outline: none;
-    border: #ccc 1px solid;
+    border: rgba(204, 204, 204, 0.5) 1px solid;
     border-radius: 4px;
     margin-top: 1em;
     max-width: 80vw;
     font-family: Poppins, sans-serif;
+}
+
+.Form form input{
+    background: var(--secondary-trans-var);
+    color: var(--primary-text)
 }
 
 .Form form button{
